// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> should render with a custom user image 1`] = `
.c1 {
  border-radius: 50%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 3.1rem;
  height: 3.1rem;
  border-radius: 50%;
  background: hsl(28,80%,52%);
  color: white;
}

<div
  aria-label="James Bond"
  class="c0"
>
  <img
    alt="James Bond"
    class="c1"
    height="31"
    src="http://urlofmyimage.com"
    width="31"
  />
</div>
`;

exports[`<Avatar /> should render without a custom size 1`] = `
.c1 {
  border-radius: 50%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 4.1rem;
  height: 4.1rem;
  border-radius: 50%;
  background: hsl(28,80%,52%);
  color: white;
}

<div
  aria-label="James Bond"
  class="c0"
>
  <img
    alt="James Bond"
    class="c1"
    height="41"
    src="http://urlofmyimage.com"
    width="41"
  />
</div>
`;

exports[`<Avatar /> should render without a problem 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 3.1rem;
  height: 3.1rem;
  border-radius: 50%;
  background: hsl(28,80%,52%);
  color: white;
}

<div
  aria-label="James Bond"
  class="c0"
>
  <span>
    JB
  </span>
</div>
`;
